Progress on web service functionality.

--- a/prjDemo.dproj
+++ b/prjDemo.dproj
@@ -127,6 +127,13 @@
             <Form>frmMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="uniConstants.pas"/>
+        <DCCReference Include="uniWebService.pas">
+            <Form>Form1</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="uniApiData.pas"/>
+        <DCCReference Include="uniRecord.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
